test commit local2

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8"
         <title>Page Title</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylecheet" type="text/css" media="screen" href="main.css">
+        <link rel="stylecheet" media="screen" href="main.css">
         <script src="main.js"></script>
     </head>
 </html>
