basket delivery options block added

--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
         <meta charset="utf-8"
         <title>Page Title</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-<<<<<<< HEAD
         <link rel="stylecheet" media="screen" href="main.css">
-=======
-        <link rel="stylecheet" type="text/css" href="main.css">
->>>>>>> 0186d7b1e9a91687511657cb04a0144d147a7808
         <script src="main.js"></script>
-    </head>
+    </head> 
+    <h2>Выберите пункт доставки:</h2>
 </html>
